force-app/main/default/objects/Contact/fields/Frequency_to_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Frequency_to_Follow_Up__c</fullName>
    <label>Frequency to Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>2x a month</fullName>
            </value>
            <value>
                <fullName>1x a month</fullName>
            </value>
            <value>
                <fullName>Don&apos;t call me I&apos;ll call you</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Distribution List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>