force-app/main/default/objects/Contact/fields/Full_Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Candidate_Name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Candidate Name</label>
    <type>Text</type>
</CustomField>