force-app/main/default/objects/Contact/fields/Gatherer_or_Hunter__c.field-meta.xml
<CustomField>
    <fullName>Gatherer_or_Hunter__c</fullName>
    <label>Gatherer or Hunter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>