force-app/main/default/objects/Contact/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>Can be utilised for radius search</description>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>