force-app/main/default/objects/Contact/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <type>TextArea</type>
</CustomField>