force-app/main/default/objects/Contact/fields/HIPAA_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Training_Date__c</fullName>
    <description>Date of latest HIPAA compliance training</description>
    <label>HIPAA Training Date</label>
    <type>Date</type>
</CustomField>