force-app/main/default/objects/Contact/fields/HJN_Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>HJN_Resume_Link__c</fullName>
    <label>HJN Resume Link</label>
    <type>Url</type>
</CustomField>