force-app/main/default/objects/Contact/fields/Hot_Job_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Hot_Job_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Job Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>