force-app/main/default/objects/Contact/fields/How_many_years_of_recruiting_experience__c.field-meta.xml
<CustomField>
    <fullName>How_many_years_of_recruiting_experience__c</fullName>
    <label>How many years of recruiting experience</label>
    <length>100</length>
    <type>Text</type>
</CustomField>