force-app/main/default/objects/Contact/fields/HR_Incident__c.field-meta.xml
<CustomField>
    <fullName>HR_Incident__c</fullName>
    <label>HR Incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Counseling</fullName>
            </value>
            <value>
                <fullName>Professional Counseling</fullName>
            </value>
            <value>
                <fullName>Workers Comp Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>