force-app/main/default/objects/Contact/fields/HR_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Incident_Date__c</fullName>
    <label>HR Incident Date</label>
    <type>Date</type>
</CustomField>