force-app/main/default/objects/Contact/fields/Ideal_Company_Culture__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Company_Culture__c</fullName>
    <label>Ideal Company Culture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>