force-app/main/default/objects/Contact/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <label>Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>