force-app/main/default/objects/Contact/fields/Immunization_Status__c.field-meta.xml
<CustomField>
    <fullName>Immunization_Status__c</fullName>
    <description>Immunization compliance for healthcare audits (Healthcare Specific)</description>
    <label>Immunization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>