force-app/main/default/objects/Contact/fields/Influenced_by_Staffing_Engine__c.field-meta.xml
<CustomField>
    <fullName>Influenced_by_Staffing_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Influenced by Staffing Engine</label>
    <type>Checkbox</type>
</CustomField>