force-app/main/default/objects/Contact/fields/Internal_Teams_Achieve_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Internal_Teams_Achieve_Initiatives__c</fullName>
    <label>Internal Teams Achieve Initiatives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>