force-app/main/default/objects/Contact/fields/Job_Stage__c.field-meta.xml
<CustomField>
    <fullName>Job_Stage__c</fullName>
    <formula>&quot;Yes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Stage</label>
    <type>Text</type>
</CustomField>