force-app/main/default/objects/Contact/fields/Key_Contact_for_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_for_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Contact for Jobs</label>
    <type>Checkbox</type>
</CustomField>