force-app/main/default/objects/Contact/fields/Last_Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Activity__c</fullName>
    <label>Last Engagement Activity</label>
    <type>Date</type>
</CustomField>