force-app/main/default/objects/Contact/fields/Legacy_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>Legacy_BirthDate__c</fullName>
    <label>Legacy BirthDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>