force-app/main/default/objects/Contact/fields/License_certificate_Expiry__c.field-meta.xml
<CustomField>
    <fullName>License_certificate_Expiry__c</fullName>
    <description>Expiry date for License and Certificates (Healthcare Specific)</description>
    <label>License/certificate Expiry</label>
    <type>Date</type>
</CustomField>