force-app/main/default/objects/Contact/fields/License_Issuing_State__c.field-meta.xml
<CustomField>
    <fullName>License_Issuing_State__c</fullName>
    <description>State issuing the license (All US states) (Healthcare Specific)</description>
    <label>License Issuing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>WI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>