force-app/main/default/objects/Contact/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>License Unique numbers if applicable (Healthcare Specific)</description>
    <externalId>true</externalId>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>