force-app/main/default/objects/Contact/fields/LinkedIn_Requested__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Requested</label>
    <type>Checkbox</type>
</CustomField>