force-app/main/default/objects/Contact/fields/Links_URLs_Handles__c.field-meta.xml
<CustomField>
    <fullName>Links_URLs_Handles__c</fullName>
    <label>Links / URLs / Handles</label>
    <type>Url</type>
</CustomField>