force-app/main/default/objects/Contact/fields/Login_Email__c.field-meta.xml
<CustomField>
    <fullName>Login_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Login Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>