force-app/main/default/objects/Contact/fields/Malpractice_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance__c</fullName>
    <description>Insurance coverage status and policy number</description>
    <label>Malpractice Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>