force-app/main/default/objects/Contact/fields/Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Status__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect ALF</fullName>
            </value>
            <value>
                <fullName>Prospect Charter Schools</fullName>
            </value>
            <value>
                <fullName>Prospect Home Health / Hospice</fullName>
            </value>
            <value>
                <fullName>Prospect Hospitals</fullName>
            </value>
            <value>
                <fullName>Prospect Schools</fullName>
            </value>
            <value>
                <fullName>Prospect Schools CT</fullName>
            </value>
            <value>
                <fullName>Prospect Schools FL</fullName>
            </value>
            <value>
                <fullName>Prospect Schools FL Districts</fullName>
            </value>
            <value>
                <fullName>Prospect Schools GA</fullName>
            </value>
            <value>
                <fullName>Prospect Schools IN</fullName>
            </value>
            <value>
                <fullName>Prospect Schools KY</fullName>
            </value>
            <value>
                <fullName>Prospect Schools NC</fullName>
            </value>
            <value>
                <fullName>Prospect Schools ND</fullName>
            </value>
            <value>
                <fullName>Prospect Schools NY</fullName>
            </value>
            <value>
                <fullName>Prospect Schools OH</fullName>
            </value>
            <value>
                <fullName>Prospect Schools OK</fullName>
            </value>
            <value>
                <fullName>Prospect Schools PA</fullName>
            </value>
            <value>
                <fullName>Prospect Schools SC</fullName>
            </value>
            <value>
                <fullName>Prospect Schools SPED IL</fullName>
            </value>
            <value>
                <fullName>Prospect Schools TN</fullName>
            </value>
            <value>
                <fullName>Prospect Schools VT</fullName>
            </value>
            <value>
                <fullName>Prospect Schools WA</fullName>
            </value>
            <value>
                <fullName>Prospect Schools WI</fullName>
            </value>
            <value>
                <fullName>Prospect SNF / LTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>