force-app/main/default/objects/Contact/fields/Medical_Staffing_Industry_Experience__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staffing_Industry_Experience__c</fullName>
    <label>Medical Staffing Industry Experience</label>
    <type>TextArea</type>
</CustomField>