force-app/main/default/objects/Contact/fields/Miles_for_search_TR__c.field-meta.xml
<CustomField>
    <fullName>Miles_for_search_TR__c</fullName>
    <label>Miles for search (TR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>