force-app/main/default/objects/Contact/fields/Most_Proud_Accomplishment__c.field-meta.xml
<CustomField>
    <fullName>Most_Proud_Accomplishment__c</fullName>
    <label>Most Proud Accomplishment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>