force-app/main/default/objects/Contact/fields/MSP_VMS_Account__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Account__c</fullName>
    <formula>Account.MSP_VMS_Account__r.Account_Name_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSP/VMS Account</label>
    <type>Text</type>
</CustomField>