force-app/main/default/objects/Contact/fields/Need_Type_of_Visa_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Need_Type_of_Visa_Sponsor__c</fullName>
    <label>Need/Type of Visa Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>