force-app/main/default/objects/Contact/fields/Need_Visa_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Need_Visa_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to see if Candidate requires Visa Sponsorship</description>
    <label>Need Visa Sponsorship</label>
    <type>Checkbox</type>
</CustomField>