force-app/main/default/objects/Contact/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <description>National Provider Identifier for healthcare providers</description>
    <label>NPI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>