force-app/main/default/objects/Contact/fields/Open_for_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Open_for_Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open for Relocation</label>
    <type>Checkbox</type>
</CustomField>