force-app/main/default/objects/Contact/fields/Open_for_relocation_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Open_for_relocation_Legacy__c</fullName>
    <label>Open for relocation Legacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>