force-app/main/default/objects/Contact/fields/Open_Jobs_Email_Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Open_Jobs_Email_Sent_on__c</fullName>
    <label>Open Jobs Email Sent on</label>
    <type>Date</type>
</CustomField>