force-app/main/default/objects/Contact/fields/OSHA_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>OSHA_Training_Date__c</fullName>
    <description>Occupational Safety &amp; Health Administration training date</description>
    <label>OSHA Training Date</label>
    <type>Date</type>
</CustomField>