force-app/main/default/objects/Contact/fields/P__c.field-meta.xml
<CustomField>
    <fullName>P__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He / Him</fullName>
            </value>
            <value>
                <fullName>She / Her</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>