force-app/main/default/objects/Contact/fields/Part_Time_Hrs_if_app__c.field-meta.xml
<CustomField>
    <fullName>Part_Time_Hrs_if_app__c</fullName>
    <label>Part Time Hrs (if app.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>