force-app/main/default/objects/Contact/fields/Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Id__c</fullName>
    <label>Payroll Id</label>
    <length>13</length>
    <type>Text</type>
</CustomField>