force-app/main/default/objects/Contact/fields/Per_Diem_Calculation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Calculation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem Calculation Email Sent</label>
    <type>Checkbox</type>
</CustomField>