force-app/main/default/objects/Contact/fields/Perm_Sal_Hr_Range__c.field-meta.xml
<CustomField>
    <fullName>Perm_Sal_Hr_Range__c</fullName>
    <label>Perm Sal/Hr Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>