force-app/main/default/objects/Contact/fields/Physical_in_last_year__c.field-meta.xml
<CustomField>
    <fullName>Physical_in_last_year__c</fullName>
    <label>Physical in last year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>