force-app/main/default/objects/Contact/fields/Planned_time_off_6_mo__c.field-meta.xml
<CustomField>
    <fullName>Planned_time_off_6_mo__c</fullName>
    <label>Planned time off 6 mo.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>