force-app/main/default/objects/Contact/fields/Preferred_Department__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>