force-app/main/default/objects/Contact/fields/Preferred_Distance_from_Job_Miles__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Distance_from_Job_Miles__c</fullName>
    <label>Preferred Distance from Job(Miles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>