force-app/main/default/objects/Contact/fields/Preferred_Frequency_for_Follow_ups__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Frequency_for_Follow_ups__c</fullName>
    <label>Preferred Frequency for Follow-ups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>