force-app/main/default/objects/Contact/fields/Preferred_name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_name__c</fullName>
    <description>Optional Preferred Name</description>
    <label>Preferred name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>