force-app/main/default/objects/Contact/fields/Preferred_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Work_Location__c</fullName>
    <label>Preferred Work Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>