force-app/main/default/objects/Contact/fields/Preferred_Work_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Work_Shifts__c</fullName>
    <label>Preferred Work Shifts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>