force-app/main/default/objects/Contact/fields/Prescreen_Completed__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Completed__c</fullName>
    <label>Prescreen Completed</label>
    <type>Date</type>
</CustomField>