force-app/main/default/objects/Contact/fields/Prescreen_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescreen Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>