force-app/main/default/objects/Contact/fields/Prescreen_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescreen Form Submitted?</label>
    <type>Checkbox</type>
</CustomField>