force-app/main/default/objects/Contact/fields/Prescreen_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescreen Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>