force-app/main/default/objects/Contact/fields/Primary_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Specialty__c</fullName>
    <description>Specialty</description>
    <label>Primary Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Academic/Research</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Adult Health</fullName>
            </value>
            <value>
                <fullName>Allergy/Immunology</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Ambulatory Care</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Antepartum</fullName>
            </value>
            <value>
                <fullName>Apheresis</fullName>
            </value>
            <value>
                <fullName>Aquatic Therapy</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility (ALF)</fullName>
            </value>
            <value>
                <fullName>Bariatrics</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Biller/Coder</fullName>
            </value>
            <value>
                <fullName>Biomedical</fullName>
            </value>
            <value>
                <fullName>Bone Marrow Transplantation (BMT)</fullName>
            </value>
            <value>
                <fullName>Burn Intensive Care Unit</fullName>
            </value>
            <value>
                <fullName>Cancer Registrar</fullName>
            </value>
            <value>
                <fullName>Cardiac Cath</fullName>
            </value>
            <value>
                <fullName>Cardiac Intensive Care Unit</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Intensive Care Unit (CVICU)</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Operating Room (CVOR)</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Catheterization Laboratory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>