force-app/main/default/objects/Contact/fields/PRN__c.field-meta.xml
<CustomField>
    <fullName>PRN__c</fullName>
    <label>PRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>