force-app/main/default/objects/Contact/fields/Professional_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Professional_Discipline__c</fullName>
    <description>Discipline in which Candidate&apos;s are interested or currently working</description>
    <label>Professional Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Athletic Trainer</fullName>
            </value>
            <value>
                <fullName>Audiologist</fullName>
            </value>
            <value>
                <fullName>Board Certified Behavior Analyst (BCBA)</fullName>
            </value>
            <value>
                <fullName>Certified Hand Therapist (CHT)</fullName>
            </value>
            <value>
                <fullName>Certified Nurse Anesthetist (CRNA)</fullName>
            </value>
            <value>
                <fullName>Certified Nursing Assistant (CNA)</fullName>
            </value>
            <value>
                <fullName>Certified Occupational Therapy Assistant (COTA)</fullName>
            </value>
            <value>
                <fullName>Certified Orientation and Mobility Specialist</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Specialist</fullName>
            </value>
            <value>
                <fullName>Clinical Psychologist</fullName>
            </value>
            <value>
                <fullName>CT Technologist (CT Tech)</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>Dietitian</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Geriatric Nursing Assistant (GNA)</fullName>
            </value>
            <value>
                <fullName>LPN / LVN</fullName>
            </value>
            <value>
                <fullName>Medical Assistant (MA / CMA)</fullName>
            </value>
            <value>
                <fullName>Medical Lab Technician (MLT)</fullName>
            </value>
            <value>
                <fullName>Medical Technologist</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner (NP / APRN)</fullName>
            </value>
            <value>
                <fullName>Nursing Home Administrator (NHA)</fullName>
            </value>
            <value>
                <fullName>Nursing Management</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist (OT)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Pharmacy Tech</fullName>
            </value>
            <value>
                <fullName>Phlebotomist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>