force-app/main/default/objects/Contact/fields/Professional_Liability_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Professional_Liability_Expiry__c</fullName>
    <description>Expiry date of professional liability insurance</description>
    <label>Professional Liability Expiry</label>
    <type>Date</type>
</CustomField>